--- a/sprint2/userDocs/Sprint2.html
+++ b/sprint2/userDocs/Sprint2.html
@@ -345,10 +345,10 @@
 		<li>get an SSL certificate</li>
 		<li>enable HTTPS in Spring Boot</li>
 		<li>redirect HTTP request to HTTPS</li>
-		<li>distribute the SSL certificate to clients</li>
+		<li>distribute the SSL certificate to clients (if self-signed)</li>
 	</ul>
-	Since we are still in a development phase, we are not going to get a signed SSL certificate, and we would have to use
-	a self-generated SSL certificate. This implies that we would have to distribute manually the certificate to each client.
+	Since we are still in a development phase, we are not going to get a trusted SSL certificate, and we would have to use
+	a self-signed SSL certificate. This implies that we would have to distribute manually the certificate to each client.
 	Thereby, we have decided to not activate it until we have to deploy in a production environment.
 
 	<h2>Testing</h2>
